feat: add ACL filters (#83)
