# packages/kafka-instance-sdk/src/main/java/com/openshift/cloud/api/kas/auth/models/AclPatternTypeFilter.java
@@ -15,54 +15,49 @@ package com.openshift.cloud.api.kas.auth.models;
 
 import java.util.Objects;
 import java.util.Arrays;
-import com.openshift.cloud.api.kas.auth.models.AclFilterAny;
-import com.openshift.cloud.api.kas.auth.models.AclPatternType;
-import com.openshift.cloud.api.kas.auth.models.AclPatternTypeFilterOneOf;
+import io.swagger.annotations.ApiModel;
 import com.fasterxml.jackson.annotation.JsonPropertyOrder;
-import com.fasterxml.jackson.annotation.JsonTypeName;
-/**
- * AclPatternTypeFilter
- */
-@JsonPropertyOrder({
-})
-@JsonTypeName("AclPatternTypeFilter")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
-public class AclPatternTypeFilter {
 
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    return true;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonValue;
+
+/**
+ * Use value &#39;MATCH&#39; to perform pattern matching.
+ */
+public enum AclPatternTypeFilter {
+  
+  LITERAL("LITERAL"),
+  
+  PREFIXED("PREFIXED"),
+  
+  ANY("ANY"),
+  
+  MATCH("MATCH");
+
+  private String value;
+
+  AclPatternTypeFilter(String value) {
+    this.value = value;
   }
 
-  @Override
-  public int hashCode() {
-    return Objects.hash();
+  @JsonValue
+  public String getValue() {
+    return value;
   }
 
   @Override
   public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class AclPatternTypeFilter {\n");
-    sb.append("}");
-    return sb.toString();
+    return String.valueOf(value);
   }
 
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(Object o) {
-    if (o == null) {
-      return "null";
+  @JsonCreator
+  public static AclPatternTypeFilter fromValue(String value) {
+    for (AclPatternTypeFilter b : AclPatternTypeFilter.values()) {
+      if (b.value.equals(value)) {
+        return b;
+      }
     }
-    return o.toString().replace("\n", "\n    ");
+    throw new IllegalArgumentException("Unexpected value '" + value + "'");
   }
-
 }
 
