# packages/kafka-instance-sdk/src/main/java/com/openshift/cloud/api/kas/auth/models/AclPatternTypeFilterOneOf.java
@@ -1,57 +1,0 @@
-/*
- * Kafka Admin REST API
- * An API to provide REST endpoints for query Kafka for admin operations
- *
- * The version of the OpenAPI document: 0.3.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-package com.openshift.cloud.api.kas.auth.models;
-
-import java.util.Objects;
-import java.util.Arrays;
-import io.swagger.annotations.ApiModel;
-import com.fasterxml.jackson.annotation.JsonPropertyOrder;
-
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonValue;
-
-/**
- * Use value &#39;MATCH&#39; to perform pattern matching.
- */
-public enum AclPatternTypeFilterOneOf {
-  
-  MATCH("MATCH");
-
-  private String value;
-
-  AclPatternTypeFilterOneOf(String value) {
-    this.value = value;
-  }
-
-  @JsonValue
-  public String getValue() {
-    return value;
-  }
-
-  @Override
-  public String toString() {
-    return String.valueOf(value);
-  }
-
-  @JsonCreator
-  public static AclPatternTypeFilterOneOf fromValue(String value) {
-    for (AclPatternTypeFilterOneOf b : AclPatternTypeFilterOneOf.values()) {
-      if (b.value.equals(value)) {
-        return b;
-      }
-    }
-    throw new IllegalArgumentException("Unexpected value '" + value + "'");
-  }
-}
-
